--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,10 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
+        //注解
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        //权限
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
     }
 }
 
