--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,5 +65,7 @@ dependencies {
     //注解
     compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.jakewharton:butterknife-compiler:8.8.1'
+    //背景模糊dialog
+    compile 'fr.tvbarthel.blurdialogfragment:lib:2.2.0'
 
 }
