--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
@@ -22,9 +22,9 @@
     <application
         android:name=".application.SoftwareApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -117,6 +117,16 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             />
 
+        <!--图片选择-->
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
         <!-- 项目原生页面 -->
         <activity android:name=".activity.LoginActivity">
@@ -129,6 +139,8 @@
         <activity android:name=".activity.RegistrationActivity" />
         <activity android:name=".activity.MainActivity"/>
         <activity android:name=".activity.ShareActivity"/>
+        <activity android:name=".activity.UpdateActivity"/>
+        <activity android:name=".activity.ImageSelectActivity"/>
     </application>
 
 </manifest>
