--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,7 +90,7 @@ dependencies {
     //高德地图
     //定位
     compile 'com.amap.api:location:latest.integration'
-    //2D地图
-    compile 'com.amap.api:map2d:latest.integration'
+    //3D地图
+    compile 'com.amap.api:3dmap:latest.integration'
 
 }
