--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -141,6 +141,7 @@
         <activity android:name=".activity.ImageSelectActivity"/>
         <activity android:name=".activity.SportActivity"/>
         <activity android:name=".activity.HtmlActivity"/>
+        <activity android:name=".activity.SQLActivity"/>
     </application>
 
 </manifest>
