--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,5 +120,9 @@ dependencies {
     compile 'com.amap.api:location:latest.integration'
     //3D地图
     compile 'com.amap.api:3dmap:latest.integration'
-
+    //网络加载
+    compile 'com.zhy:okhttputils:2.6.2'
+    compile 'com.blankj:utilcode:1.3.4'
+    //loading
+    compile 'com.github.d-max:spots-dialog:0.7@aar'
 }
