--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,4 +125,6 @@ dependencies {
     compile 'com.blankj:utilcode:1.3.4'
     //loading
     compile 'com.github.d-max:spots-dialog:0.7@aar'
+    //design
+    compile 'com.android.support:design:26.0.0-alpha1'
 }
