--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -58,6 +58,11 @@ android {
             keyAlias "androiddebugkey"
             keyPassword "android"
         }
+    }
+
+    lintOptions{
+        checkReleaseBuilds false
+        abortOnError false
     }
 
 }
