--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
-
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
 
     <application
@@ -163,6 +164,7 @@
         <activity android:name=".activity.HtmlActivity"/>
         <activity android:name=".activity.SQLActivity"/>
         <activity android:name=".activity.could.IMActivity"/>
+        <activity android:name=".activity.BluetoothActivity"/>
 
         <!--会话界面-->
         <activity
