--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,9 @@ android {
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
+            moduleName "hello"
             abiFilters "armeabi-v7a", "x86"
+
         }
     }
     dexOptions {
@@ -47,6 +49,7 @@ android {
             signingConfig signingConfigs.debug
             proguardFiles 'proguard-rules.pro'
         }
+
     }
 
     signingConfigs {
